<resources>
    <string name="app_name">Talk Around</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="post">Post</string>
    <string name="clear">Clear</string>
    <string name="submit">Send</string>
    <string name="cancel">Cancel</string>
    <string name="retrieve">Retrieve</string>
    <string name="addTalk">Add new talk</string>
    <string name="distanceText">(Distance: 15.3m)</string>
    <string name="answerOrderNumberText">12</string>
    <string name="crateNewTalk">Create new talk</string>
    <string name="talkTitle">Title</string>
    <string name="answerTitleText">12:45 23.05.2016</string>
    <string name="talkTitleText">Mobile development</string>
    <string name="talkMessageText">The API is device-agnostic; it does not care how the browser determines location</string>
    <string name="talkText">Message</string>
    <string name="title_activity_display_talk">DisplayTalkActivity</string>
    <string name="sendAnswer">Send</string>
    <string name="geoLocationZone">Geolocation zone</string>
    <string name="talksFound">Found 0 talk(s)</string>
    <string name="talk_around">Talk around</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="tab_titles">
        <item>Message list</item>
        <item>Map</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="m100">100 m</string>
    <string name="m500">500 m</string>
    <string name="m1000">1000 m</string>
    <string name="add">Add message</string>
    <string name="error">Ошибка подключения к серверу</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="add_talk">New Talk</string>
    <string name="send">send</string>
    <string name="title">Title</string>
    <string name="messageHint">Message</string>
</resources>
