<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="2dp"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:title="@string/messages"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/talk_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/talkTitleText"
                android:textColor="#083661"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/answer_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#E8EEF2"
                android:divider="@android:color/transparent"
                android:dividerHeight="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/answer_text"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:background="@null"
                    android:textColor="#083661" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="#92278F"
                    android:onClick="addNewAnswer"
                    android:text="@string/sendAnswer"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
