<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar_layout"

            android:orientation="vertical">

            <android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="2dp"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMaxWidth="0dp"
                app:tabMode="fixed"
                app:tabTextColor="@color/grey"
                app:tabSelectedTextColor="@color/white" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#26000000"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:onClick="setLocationSmall">

                    <ImageView
                        android:id="@+id/smallLocBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="7dp"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:paddingTop="7dp"
                        android:scaleType="fitXY" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/smallLocBtn"
                        android:layout_alignEnd="@id/smallLocBtn"
                        android:layout_alignStart="@id/smallLocBtn"
                        android:layout_alignTop="@id/smallLocBtn"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:text="@string/m100"
                        android:textColor="#fff"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:onClick="setLocationMedium">

                    <ImageView
                        android:id="@+id/mediumLocBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="7dp"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:paddingTop="7dp"
                        android:scaleType="fitXY" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/mediumLocBtn"
                        android:layout_alignEnd="@id/mediumLocBtn"
                        android:layout_alignStart="@id/mediumLocBtn"
                        android:layout_alignTop="@id/mediumLocBtn"
                        android:gravity="center"
                        android:text="@string/m500"
                        android:textColor="#fff"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:onClick="setLocationBig">

                    <ImageView
                        android:id="@+id/bigLocBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="7dp"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:paddingTop="7dp"
                        android:scaleType="fitXY" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/bigLocBtn"
                        android:layout_alignEnd="@id/bigLocBtn"
                        android:layout_alignStart="@id/bigLocBtn"
                        android:layout_alignTop="@id/bigLocBtn"
                        android:gravity="center"
                        android:text="@string/m1000"
                        android:textColor="#fff"
                        android:textSize="24sp" />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
